# cryptography

./: .gitignore  ANALYSIS.md  ASYMMETRIC.md  BENCHMARKING.md  Cargo.toml  MANUAL.md  README.md  SYMMETRIC.md  bench_all.sh  bench_all_pk.sh  bench_all_pk_full.sh
assets/: generate_ec_encryption_radar.py  generate_ec_key_agreement_radar.py  generate_ec_signature_radar.py  generate_fast_vs_ct_radar.py  generate_pk_platform_radar.py  generate_public_key_radar.py  generate_symmetric_platform_radar.py
benches/: aes_bench.rs  cipher_bench.rs
benchmarks/: Cargo.toml
benchmarks/benches/: aes_bench.rs  cipher_bench.rs
benchmarks/src/: lib.rs
ml/: README.md  check_dataset.py  requirements.txt  run_adaptive_experiment.py  train_distinguisher.py
scripts/: bench_all.sh  bench_all_pk.sh  bench_all_pk_full.sh  fetch_mlkem_refs.sh  merge_pilot_tables.py
src/: aes.rs  camellia.rs  cast128.rs  cast128_tables.rs  ct.rs  des.rs  grasshopper.rs  lib.rs  magma.rs  main.rs  present.rs  scrub.rs  seed.rs  serpent.rs  simon.rs  sm4.rs  speck.rs  twofish.rs  zuc.rs
src/ciphers/: aes.rs  camellia.rs  cast128.rs  cast128_tables.rs  chacha20.rs  des.rs  grasshopper.rs  magma.rs  mod.rs  present.rs  rabbit.rs  salsa20.rs  seed.rs  serpent.rs  simon.rs  simon_speck_util.rs  sm4.rs  snow3g.rs  speck.rs  twofish.rs  zuc.rs
src/cprng/: blum_blum_shub.rs  blum_micali.rs  ctr_drbg.rs  mod.rs  primes.rs
src/hash/: mod.rs  (+4 more)
tests/: manual_examples.rs
verus/: README.md  cprng_primes_u128.rs  public_key_bigint_algorithms.rs  public_key_bigint_core_u128.rs  public_key_bigint_division_u128.rs
(+27 files in other folders)
