[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"
autobenches = false

[lib]
name = "cryptography"
path = "src/lib.rs"

# Benchmark targets live in the separate `benchmarks/` crate so ordinary
# `cargo test` on this package does not need to resolve benchmark-only crates.

[dependencies]
