[package]
name = "cryptography-benchmarks"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bench]]
name = "aes_bench"
harness = false

[[bench]]
name = "cipher_bench"
harness = false

[dependencies]
cryptography = { path = ".." }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
sodiumoxide = "0.2"
